force-app/main/default/objects/Employee__c/fields/Areas__c.field-meta.xml
<CustomField>
    <fullName>Areas__c</fullName>
    <label>Areas</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>City__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hi-tech City</fullName>
            </value>
            <value>
                <fullName>SR Nagar</fullName>
            </value>
            <value>
                <fullName>Ameerpet</fullName>
            </value>
            <value>
                <fullName>Nungambkkam</fullName>
            </value>
            <value>
                <fullName>gundy</fullName>
            </value>
            <value>
                <fullName>Amanjakaray</fullName>
            </value>
            <value>
                <fullName>Marathal1</fullName>
            </value>
            <value>
                <fullName>Marathal2</fullName>
            </value>
            <value>
                <fullName>Marathal3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>