force-app/main/default/objects/Employee__c/fields/ContatctName__c.field-meta.xml
<CustomField>
    <fullName>ContatctName__c</fullName>
    <label>ContatctName</label>
    <referenceTo>Contatct__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>